<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>universe_dbw2_bridge</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dhavalpu@buffalo.edu">DeeKay Goswami</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>tier4_api_msgs</depend>
  <depend>tier4_api_utils</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>ds_dbw_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Add config and launch directories -->
  <export>
    <build_type>ament_cmake</build_type>
    <ros2>
      <package>config</package>
      <package>launch</package>
    </ros2>
  </export>
</package>
